<resources>
    <string name="app_name">Github User App</string>
    <string name="name">Leo Messi</string>
    <string name="search_hint">Search name…</string>
    <string name="followers">%1$d Followers</string>
    <string name="following">%1$d Following</string>
    <string name="username_detail">leo_messi30</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_followers">this is tab %1%d</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="setting">Setting</string>
    <string name="light_mode">Change Theme to Dark Mode  </string>
    <string name="dark_mode">Change Theme to Light Mode  </string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="share">share</string>
    <string name="title_favorite">Favorite</string>
</resources>